run.sh update